perubahan index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Kita akan menguasai dasar-dasar HTML dan cara membuat dokumen HTML dengan benar. Memahami dan menguasai HTML akan memungkinkan kita dapat membuat sebuah website sederhana sampai website kompleks.</p>
     <hr>
     <p><strong>Siap menguasai HTML?!</strong> Yuk kita <a href="struktur-dokumen.html">mulai</a>.</p>
+    <p>perubahan dimulai dari sekarang untuk masa depan</p>
 </body>
 </html>
